consolidate tooltip styles, add % to graph tooltip, fix graph going off screen, strip bootstrap css

--- a/src/app/map-tool/data-panel/eviction-graphs/eviction-graphs.component.scss
+++ b/src/app/map-tool/data-panel/eviction-graphs/eviction-graphs.component.scss
@@ -200,6 +200,7 @@
     .legend-data {
       margin-left: grid(5);
       margin-top: grid(1);
+      @include numberFont(14px);
     }
     .btn-close { 
       position:absolute;
@@ -330,6 +331,9 @@
 
 // Tooltips
 // ----
+$graphTooltipHeight: grid(4);
+$graphTooltipCircleSize: 10px;
+// year line and label
 .year-marker {
   position:absolute;
   left:0;
@@ -348,49 +352,62 @@
     text-align: center;
   }
 }
+// tooltip transitions
+.tooltip {
+  transition: transform 0.4s cubic-bezier(0, 0.66, 0.66, 1);  
+}
+// tooltip container classes
 .line-tooltips, .bar-tooltips {
   @include fill-parent();
   pointer-events: none;
 }
-.line-tooltip, .bar-tooltip {
-  position:absolute;
-  top:0;
-  left:0;
-  color: #fff;
-  padding:4px;
-  font-size: 11px;
-  background: rgba(0,0,0,0.8);
-  border-radius: 3px;
-}
-.bar-tooltip {
-  min-width: 40px;
+// bar tooltip defaults
+.bar-tooltips .tooltip {
+  min-width: grid(6);
+  margin-left: -1*grid(3);
   text-align:center;
-  margin-left: -20px;
-  margin-top: -26px;
-  @include down-arrow(6px, rgba(0,0,0,0.8));
+  margin-top: -1.5*$graphTooltipHeight;
 }
-.line-tooltip {
-  width: 48px;
-  height: 24px;
-  margin-top:-12px;
-  margin-left: 12px;
-  text-align:center;
-  line-height: 15px;
-  transition: transform 0.4s cubic-bezier(0, 0.66, 0.66, 1);  
-  @include left-arrow(6px, rgba(0,0,0,0.8));
-  &:after { z-index:5; }
+// wrapper for line graph tooltip (so we can switch orientation)
+.tooltip-wrapper {
+  position:relative;
+  width:100%;
+  height:100%;
+}
+// line tooltip defaults
+.line-tooltips .tooltip {
+  height: $graphTooltipHeight;
+  line-height: 17px;
+  margin-top: -1*$graphTooltipHeight/2;
+  margin-left: $graphTooltipCircleSize/2;
+  // nudge arrow outside of wrapper 
+  &.right {
+    .tooltip-wrapper .tooltip-arrow {
+      left: -1*$tooltipArrowSize;
+    }
+  }
+  // shift the tooltip to the left and nudge the arrow out of the wrapper
+  &.left {
+    .tooltip-wrapper {
+      margin-left: calc(-100% - #{grid(3)});
+      .tooltip-arrow {
+        right: -1*$tooltipArrowSize;
+      }
+    }
+  }
+  // circles that overlay the line
   &:before {
     content: "";
     display:block;
-    width:10px;
-    height:10px;
-    border-radius:6px;
+    width:$graphTooltipCircleSize;
+    height:$graphTooltipCircleSize;
+    border-radius:$graphTooltipCircleSize;
     position:absolute;
-    top: 7px;
-    left:0px;
-    margin-left: -17px;
+    top: calc(50% - #{$graphTooltipCircleSize / 2});
+    left: -1*$graphTooltipCircleSize;
     z-index:1;
   }
+  // circle colors
   &:nth-child(2):before {
     background:$color1;
   }
@@ -403,14 +420,8 @@
   &:nth-child(5):before {
     background:$color4;
   }
-  .line-tooltip-year {
-    display:block;
-    font-weight: 400;
-  }
-  .line-tooltip-value {
-    font-weight: 600;
-  }
 }
-.average-shown .line-tooltip:last-of-type:before {
+// force the average circle to be $color4
+.average-shown .tooltip:last-of-type:before {
   background:$color4;
 }
